# qtDNA

./: .gitignore  CMakeLists.txt  LICENSE  mainwindow.cpp  mainwindow.h  openglwidget.cpp  openglwidget.h  qmake.pro
